# AI_BE_TEMPLATE

./: .gitignore  LICENSE.md  Makefile  README.md  README_zh.md  ai_design_prompt.md  ai_diagbe.service  project_overview.md  pyproject.toml  requirements.txt  requirements_pytest.txt  verify_api.py  verify_non_blocking.py
.agent/rules/: designspec.md
.agent/workflows/: commitdesign.md  dodesign.md  setup.md
.github/workflows/: ci.yml
app/: main.py  utils.py
docs/: operation_sequence_assemble_test.md  system_architecture.drawio  test_case_api.md  test_plan.md
docs/en/: README.md  api_spec.md  design_spec.md  operation_sequence_1_assemble_test.md  operation_sequence_2_check_status.md  operation_sequence_3_push_result.md  operation_sequence_4_admin_ops.md  operation_sequence_5_admin_monitor.md  operation_sequence_assemble_test.md  operation_sequence_get_status.md  system_architecture.drawio  test_case_api.md  test_plan.md
docs/zh/: README.md  api_spec.md  design_spec.md  operation_sequence_1_assemble_test.md  operation_sequence_2_check_status.md  operation_sequence_3_push_result.md  operation_sequence_4_admin_ops.md  operation_sequence_5_admin_monitor.md  operation_sequence_assemble_test.md  (+3 more)
scripts/: assemble_test.py  mock_assemble_test.py  mock_test_error.py  mock_test_inprogress.py  mock_test_pending.py
tests/: test_mock_api.py  test_mock_cleanup.py  test_mock_custom_id.py  test_mock_delete_api.py  test_mock_fim_state.py  test_mock_integration_states.py  test_mock_list_api.py  test_real_assemble_test.py  test_real_fim_state.py  test_real_predefined_id.py
