[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_diagbe"
version = "0.1.0"
description = "AI Diagnosis Backend Service"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "httpx",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
